--- a/ex16/src/index.html
+++ b/ex16/src/index.html
@@ -1,22 +1,23 @@
-  
 <h2>CatPhotoApp</h2>
 <main>
-	<a href="#"><img src="https://bit.ly/3fUJAV1" alt="cat Photo App" /></a>
-	<p>Kitty ipsum dolor sit amet, shed everywhere shed everywhere stretching attack your ankles chase the red dot, hairball run catnip eat the grass sniff.</p>
-	<p>Things cats love:</p>
-	<ul>
-		<li>Grooming</li>
-		<li>Birds</li>
-		<li>Humans</li>
-	</ul>
-	<p>Top 3 things cats hate:</p>
-	<ol>
-		<li>Humans</li>
-		<li>Birds</li>
-		<li>Grooming</li>
-	</ol>
-	<input type="text" placeholder="cat photo URL">
-	
-
-  </main>
-   <footer id="footer"></footer>
+  <a href="#"><img src="https://bit.ly/3fUJAV1" alt="cat Photo App" /></a>
+  <p>
+    Kitty ipsum dolor sit amet, shed everywhere shed everywhere stretching
+    attack your ankles chase the red dot, hairball run catnip eat the grass
+    sniff.
+  </p>
+  <p>Things cats love:</p>
+  <ul>
+    <li>Grooming</li>
+    <li>Birds</li>
+    <li>Humans</li>
+  </ul>
+  <p>Top 3 things cats hate:</p>
+  <ol>
+    <li>Humans</li>
+    <li>Birds</li>
+    <li>Grooming</li>
+  </ol>
+  <input type="text" placeholder="cat photo URL" />
+</main>
+<footer id="footer"></footer>
