--- a/ex16/src/index.html
+++ b/ex16/src/index.html
@@ -18,6 +18,6 @@
     <li>Birds</li>
     <li>Grooming</li>
   </ol>
-  <input type="text" placeholder="cat photo URL" />
+  <input type="text" placeholder="cat photo URL">
 </main>
 <footer id="footer"></footer>
