--- a/ex17/src/index.html
+++ b/ex17/src/index.html
@@ -19,8 +19,8 @@
     <li>Grooming</li>
   </ol>
   <form action="/submit-cat-photo">
-    <input type="text" placeholder="cat photo URL" />
-    <button type="submit">"Submit"</button>
+    <input type="text" placeholder="cat photo URL">
+    <button type="submit">Submit</button>
   </form>
 </main>
 <footer id="footer"></footer>
